--- a/ECG_couple_CNN.ipynb
+++ b/ECG_couple_CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "from torch.utils.data import Dataset, DataLoader, TensorDataset, random_split\n"
+    "from torch.utils.data import Dataset, DataLoader, TensorDataset, random_split, WeightedRandomSampler\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,84 +130,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "save_dir = os.path.join(data_dir, \"models\")\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
-    "model_path = os.path.join(save_dir, \"ECG_couple_CNN.pt\")\n"
+    "model_path = os.path.join(save_dir, \"ECG_couple_CNN_sampler010.pt\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100 - Train Loss: 0.1997 | Val Loss: 0.1085 | Val Acc: 0.9709\n",
+      "Epoch 1/100 - Train Loss: 0.3067 | Val Loss: 0.2860 | Val Acc: 0.8984\n",
       "Best model saved.\n",
-      "Epoch 2/100 - Train Loss: 0.1078 | Val Loss: 0.0851 | Val Acc: 0.9764\n",
+      "Epoch 2/100 - Train Loss: 0.1497 | Val Loss: 0.1661 | Val Acc: 0.9445\n",
       "Best model saved.\n",
-      "Epoch 3/100 - Train Loss: 0.0837 | Val Loss: 0.0699 | Val Acc: 0.9793\n",
+      "Epoch 3/100 - Train Loss: 0.1052 | Val Loss: 0.1502 | Val Acc: 0.9416\n",
       "Best model saved.\n",
-      "Epoch 4/100 - Train Loss: 0.0744 | Val Loss: 0.0717 | Val Acc: 0.9790\n",
-      "Epoch 5/100 - Train Loss: 0.0660 | Val Loss: 0.0564 | Val Acc: 0.9830\n",
+      "Epoch 4/100 - Train Loss: 0.0878 | Val Loss: 0.0982 | Val Acc: 0.9683\n",
       "Best model saved.\n",
-      "Epoch 6/100 - Train Loss: 0.0605 | Val Loss: 0.0529 | Val Acc: 0.9842\n",
+      "Epoch 5/100 - Train Loss: 0.0735 | Val Loss: 0.1135 | Val Acc: 0.9624\n",
+      "Epoch 6/100 - Train Loss: 0.0620 | Val Loss: 0.1169 | Val Acc: 0.9584\n",
+      "Epoch 7/100 - Train Loss: 0.0576 | Val Loss: 0.0877 | Val Acc: 0.9693\n",
       "Best model saved.\n",
-      "Epoch 7/100 - Train Loss: 0.0554 | Val Loss: 0.0525 | Val Acc: 0.9849\n",
+      "Epoch 8/100 - Train Loss: 0.0512 | Val Loss: 0.0801 | Val Acc: 0.9728\n",
       "Best model saved.\n",
-      "Epoch 8/100 - Train Loss: 0.0510 | Val Loss: 0.0483 | Val Acc: 0.9856\n",
+      "Epoch 9/100 - Train Loss: 0.0464 | Val Loss: 0.0712 | Val Acc: 0.9772\n",
       "Best model saved.\n",
-      "Epoch 9/100 - Train Loss: 0.0457 | Val Loss: 0.0515 | Val Acc: 0.9854\n",
-      "Epoch 10/100 - Train Loss: 0.0450 | Val Loss: 0.0463 | Val Acc: 0.9857\n",
+      "Epoch 10/100 - Train Loss: 0.0421 | Val Loss: 0.0806 | Val Acc: 0.9720\n",
+      "Epoch 11/100 - Train Loss: 0.0416 | Val Loss: 0.0608 | Val Acc: 0.9811\n",
       "Best model saved.\n",
-      "Epoch 11/100 - Train Loss: 0.0411 | Val Loss: 0.0478 | Val Acc: 0.9858\n",
-      "Epoch 12/100 - Train Loss: 0.0361 | Val Loss: 0.0464 | Val Acc: 0.9863\n",
-      "Epoch 13/100 - Train Loss: 0.0359 | Val Loss: 0.0439 | Val Acc: 0.9866\n",
+      "Epoch 12/100 - Train Loss: 0.0383 | Val Loss: 0.0735 | Val Acc: 0.9763\n",
+      "Epoch 13/100 - Train Loss: 0.0341 | Val Loss: 0.0588 | Val Acc: 0.9818\n",
       "Best model saved.\n",
-      "Epoch 14/100 - Train Loss: 0.0352 | Val Loss: 0.0467 | Val Acc: 0.9863\n",
-      "Epoch 15/100 - Train Loss: 0.0314 | Val Loss: 0.0442 | Val Acc: 0.9871\n",
-      "Epoch 16/100 - Train Loss: 0.0300 | Val Loss: 0.0438 | Val Acc: 0.9875\n",
+      "Epoch 14/100 - Train Loss: 0.0344 | Val Loss: 0.0751 | Val Acc: 0.9752\n",
+      "Epoch 15/100 - Train Loss: 0.0310 | Val Loss: 0.0682 | Val Acc: 0.9785\n",
+      "Epoch 16/100 - Train Loss: 0.0288 | Val Loss: 0.0660 | Val Acc: 0.9800\n",
+      "Epoch 17/100 - Train Loss: 0.0286 | Val Loss: 0.0649 | Val Acc: 0.9798\n",
+      "Epoch 18/100 - Train Loss: 0.0282 | Val Loss: 0.0557 | Val Acc: 0.9829\n",
       "Best model saved.\n",
-      "Epoch 17/100 - Train Loss: 0.0279 | Val Loss: 0.0417 | Val Acc: 0.9874\n",
+      "Epoch 19/100 - Train Loss: 0.0237 | Val Loss: 0.0550 | Val Acc: 0.9842\n",
       "Best model saved.\n",
-      "Epoch 18/100 - Train Loss: 0.0262 | Val Loss: 0.0459 | Val Acc: 0.9862\n",
-      "Epoch 19/100 - Train Loss: 0.0273 | Val Loss: 0.0424 | Val Acc: 0.9882\n",
-      "Epoch 20/100 - Train Loss: 0.0244 | Val Loss: 0.0469 | Val Acc: 0.9866\n",
-      "Epoch 21/100 - Train Loss: 0.0262 | Val Loss: 0.0388 | Val Acc: 0.9889\n",
+      "Epoch 20/100 - Train Loss: 0.0260 | Val Loss: 0.0499 | Val Acc: 0.9852\n",
       "Best model saved.\n",
-      "Epoch 22/100 - Train Loss: 0.0224 | Val Loss: 0.0414 | Val Acc: 0.9887\n",
-      "Epoch 23/100 - Train Loss: 0.0228 | Val Loss: 0.0435 | Val Acc: 0.9884\n",
-      "Epoch 24/100 - Train Loss: 0.0221 | Val Loss: 0.0415 | Val Acc: 0.9880\n",
-      "Epoch 25/100 - Train Loss: 0.0205 | Val Loss: 0.0410 | Val Acc: 0.9885\n",
-      "Epoch 26/100 - Train Loss: 0.0208 | Val Loss: 0.0450 | Val Acc: 0.9875\n",
-      "Epoch 27/100 - Train Loss: 0.0210 | Val Loss: 0.0404 | Val Acc: 0.9886\n",
-      "Epoch 28/100 - Train Loss: 0.0188 | Val Loss: 0.0397 | Val Acc: 0.9881\n",
-      "Epoch 29/100 - Train Loss: 0.0197 | Val Loss: 0.0405 | Val Acc: 0.9894\n",
-      "Epoch 30/100 - Train Loss: 0.0186 | Val Loss: 0.0374 | Val Acc: 0.9898\n",
-      "Best model saved.\n",
-      "Epoch 31/100 - Train Loss: 0.0183 | Val Loss: 0.0404 | Val Acc: 0.9890\n",
-      "Epoch 32/100 - Train Loss: 0.0185 | Val Loss: 0.0401 | Val Acc: 0.9886\n",
-      "Epoch 33/100 - Train Loss: 0.0164 | Val Loss: 0.0412 | Val Acc: 0.9890\n",
-      "Epoch 34/100 - Train Loss: 0.0161 | Val Loss: 0.0484 | Val Acc: 0.9873\n",
-      "Epoch 35/100 - Train Loss: 0.0164 | Val Loss: 0.0417 | Val Acc: 0.9885\n",
-      "Epoch 36/100 - Train Loss: 0.0162 | Val Loss: 0.0425 | Val Acc: 0.9886\n",
-      "Epoch 37/100 - Train Loss: 0.0150 | Val Loss: 0.0434 | Val Acc: 0.9881\n",
-      "Epoch 38/100 - Train Loss: 0.0159 | Val Loss: 0.0413 | Val Acc: 0.9891\n",
-      "Epoch 39/100 - Train Loss: 0.0158 | Val Loss: 0.0453 | Val Acc: 0.9881\n",
-      "Epoch 40/100 - Train Loss: 0.0164 | Val Loss: 0.0470 | Val Acc: 0.9885\n",
-      "Epoch 41/100 - Train Loss: 0.0139 | Val Loss: 0.0420 | Val Acc: 0.9887\n",
-      "Epoch 42/100 - Train Loss: 0.0142 | Val Loss: 0.0412 | Val Acc: 0.9891\n",
-      "Epoch 43/100 - Train Loss: 0.0153 | Val Loss: 0.0427 | Val Acc: 0.9881\n",
-      "Epoch 44/100 - Train Loss: 0.0128 | Val Loss: 0.0437 | Val Acc: 0.9879\n",
-      "Epoch 45/100 - Train Loss: 0.0136 | Val Loss: 0.0431 | Val Acc: 0.9883\n",
-      "Early stopping at epoch 45\n"
+      "Epoch 21/100 - Train Loss: 0.0221 | Val Loss: 0.0633 | Val Acc: 0.9820\n",
+      "Epoch 22/100 - Train Loss: 0.0239 | Val Loss: 0.0592 | Val Acc: 0.9834\n",
+      "Epoch 23/100 - Train Loss: 0.0208 | Val Loss: 0.0563 | Val Acc: 0.9844\n",
+      "Epoch 24/100 - Train Loss: 0.0209 | Val Loss: 0.0631 | Val Acc: 0.9827\n",
+      "Epoch 25/100 - Train Loss: 0.0203 | Val Loss: 0.0552 | Val Acc: 0.9849\n",
+      "Epoch 26/100 - Train Loss: 0.0210 | Val Loss: 0.0613 | Val Acc: 0.9825\n",
+      "Epoch 27/100 - Train Loss: 0.0189 | Val Loss: 0.0613 | Val Acc: 0.9846\n",
+      "Epoch 28/100 - Train Loss: 0.0190 | Val Loss: 0.0637 | Val Acc: 0.9809\n",
+      "Epoch 29/100 - Train Loss: 0.0170 | Val Loss: 0.0679 | Val Acc: 0.9816\n",
+      "Epoch 30/100 - Train Loss: 0.0188 | Val Loss: 0.0556 | Val Acc: 0.9857\n",
+      "Epoch 31/100 - Train Loss: 0.0163 | Val Loss: 0.0572 | Val Acc: 0.9838\n",
+      "Epoch 32/100 - Train Loss: 0.0168 | Val Loss: 0.0540 | Val Acc: 0.9869\n",
+      "Epoch 33/100 - Train Loss: 0.0164 | Val Loss: 0.0549 | Val Acc: 0.9859\n",
+      "Epoch 34/100 - Train Loss: 0.0168 | Val Loss: 0.0599 | Val Acc: 0.9822\n",
+      "Epoch 35/100 - Train Loss: 0.0161 | Val Loss: 0.0594 | Val Acc: 0.9846\n",
+      "Early stopping at epoch 35\n"
      ]
     }
    ],
@@ -247,8 +236,37 @@
     "train_dataset = TensorDataset(X_train_tensor[train_indices], y_train_tensor[train_indices])\n",
     "val_dataset = TensorDataset(X_train_tensor[val_indices], y_train_tensor[val_indices])\n",
     "\n",
+    "\n",
     "#data loader\n",
-    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "#sampler\n",
+    "use_sampler = True\n",
+    "target_ratio = 0.1\n",
+    "if use_sampler:\n",
+    "    y_train_split = y_train[train_indices]\n",
+    "    class_sample_counts = np.bincount(y_train_split)\n",
+    "\n",
+    "    # class 0 as base\n",
+    "    target_count = int(class_sample_counts[0] * target_ratio)\n",
+    "    weights_per_class = []\n",
+    "\n",
+    "    for i, count in enumerate(class_sample_counts):\n",
+    "        if i == 0:\n",
+    "            weight = 1.0  # class 0 weight1\n",
+    "        else:\n",
+    "            weight = target_count / count\n",
+    "        weights_per_class.append(weight)\n",
+    "    weights_per_class = np.array(weights_per_class)\n",
+    "    samples_weight = weights_per_class[y_train_split]\n",
+    "    sampler = WeightedRandomSampler(\n",
+    "        weights=samples_weight,\n",
+    "        num_samples=len(samples_weight),\n",
+    "        replacement=True\n",
+    "    )\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=64, sampler=sampler)\n",
+    "else:\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "\n",
+    "#train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=64, shuffle=False)\n",
     "\n",
     "# weight loss\n",
@@ -258,17 +276,17 @@
     "base_weights = [total_samples / (num_classes * n) for n in class_counts]\n",
     "\n",
     "# alpha = 1, fully weight according to class frequency, alpha = 0 no weighting\n",
-    "# alpha = 0\n",
+    "# alpha = 1\n",
     "# adjusted_weights = [1 + alpha * (w - 1) for w in base_weights]\n",
     "# weights_tensor = torch.tensor(adjusted_weights, dtype=torch.float32).to(device)\n",
     "\n",
     "model = ECG_CNN().to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "#criterion = nn.CrossEntropyLoss(weight=weights_tensor)\n",
+    "# criterion = nn.CrossEntropyLoss(weight=weights_tensor)\n",
     "#optimizer = optim.Adam(model.parameters(), lr=1e-3)\n",
     "optimizer = optim.AdamW(model.parameters(), lr=1e-3,weight_decay=1e-3)\n",
     "# Scheduler: reduce LR on plateau (val loss)\n",
-    "#scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode=\"min\", factor=0.5, patience=3, min_lr=1e-6)\n",
+    "#scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode=\"min\", factor=0.8, patience=3, min_lr=1e-6)\n",
     "\n",
     "num_epochs = 100\n",
     "best_val_loss = float(\"inf\")\n",
@@ -324,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -373,29 +391,29 @@
      "output_type": "stream",
      "text": [
       "===== Confusion Matrix =====\n",
-      "[[18051    44    14     4     5]\n",
-      " [   99   446    11     0     0]\n",
-      " [   36     1  1387    23     1]\n",
-      " [   16     0     9   137     0]\n",
-      " [   17     0     1     0  1590]]\n",
+      "[[18009    60    34    12     3]\n",
+      " [   91   456     9     0     0]\n",
+      " [   23     3  1399    23     0]\n",
+      " [   11     1    10   140     0]\n",
+      " [   24     0     3     0  1581]]\n",
       "\n",
       "===== Per-Class Metrics =====\n",
-      "recall: [0.9963 0.8022 0.9579 0.8457 0.9888]\n",
-      "specificity: [0.9555 0.9979 0.9983 0.9988 0.9997]\n",
-      "precision: [0.9908 0.9084 0.9754 0.8354 0.9962]\n",
-      "f1: [0.9935 0.852  0.9666 0.8405 0.9925]\n",
+      "recall: [0.994  0.8201 0.9662 0.8642 0.9832]\n",
+      "specificity: [0.9605 0.997  0.9973 0.9984 0.9999]\n",
+      "precision: [0.9918 0.8769 0.9615 0.8    0.9981]\n",
+      "f1: [0.9929 0.8476 0.9638 0.8309 0.9906]\n",
       "\n",
       "===== Macro-Average Metrics =====\n",
-      "recall: 0.9182\n",
-      "specificity: 0.9900\n",
-      "precision: 0.9412\n",
-      "f1: 0.9290\n",
+      "recall: 0.9255\n",
+      "specificity: 0.9906\n",
+      "precision: 0.9257\n",
+      "f1: 0.9252\n",
       "\n",
       "===== Weighted-Average Metrics =====\n",
-      "recall: 0.9872\n",
-      "specificity: 0.9630\n",
-      "precision: 0.9869\n",
-      "f1: 0.9869\n"
+      "recall: 0.9860\n",
+      "specificity: 0.9670\n",
+      "precision: 0.9859\n",
+      "f1: 0.9859\n"
      ]
     }
    ],
