--- a/ECG_couple_CNN.ipynb
+++ b/ECG_couple_CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,59 @@
     "\n",
     "# reshape: (samples, 1, 187)\n",
     "X_train = X_train[:, np.newaxis, :]\n",
-    "X_test = X_test[:, np.newaxis, :]\n",
+    "X_test = X_test[:, np.newaxis, :]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Augmentation\n"
+     ]
+    }
+   ],
+   "source": [
+    "# =========================\n",
+    "# Data Augmentation Block\n",
+    "# =========================\n",
+    "\n",
+    "def time_mask(X, mask_size=20, num_masks=2):\n",
+    "    \"\"\"time masking\"\"\"\n",
+    "    X_aug = X.copy()\n",
+    "    N, C, T = X_aug.shape\n",
+    "    for i in range(N):\n",
+    "        for _ in range(num_masks):\n",
+    "            if T > mask_size:\n",
+    "                start = np.random.randint(0, T - mask_size)\n",
+    "                X_aug[i, :, start:start+mask_size] = 0\n",
+    "    return X_aug\n",
+    "\n",
+    "def add_noise(X, noise_level=0.01):\n",
+    "    \"\"\"Gaussian noise\"\"\"\n",
+    "    noise = np.random.normal(0, noise_level, X.shape)\n",
+    "    return X + noise\n",
+    "\n",
+    "def scaling(X, sigma=0.1):\n",
+    "    \"\"\"np.random.normal(mean, std, size)\"\"\"\n",
+    "    factors = np.random.normal(1.0, sigma, (X.shape[0], 1, 1))\n",
+    "    return X * factors\n",
+    "print(\"Data Augmentation\")\n",
+    "X_train = time_mask(X_train, mask_size=20, num_masks=2)\n",
+    "X_train = add_noise(X_train, noise_level=0.01)\n",
+    "X_train = scaling(X_train, sigma=0.1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
     "y_train_tensor = torch.tensor(y_train, dtype=torch.long)\n",
@@ -57,7 +109,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stratified split\n"
+     ]
+    }
+   ],
+   "source": [
+    "#keep same seed for all model\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "#Stratified split\n",
+    "Stratified_split = True\n",
+    "if Stratified_split:\n",
+    "    print(\"Stratified split\")\n",
+    "    class_ranges = [\n",
+    "        (0, 72471),\n",
+    "        (72471, 74694),\n",
+    "        (74694, 80483),\n",
+    "        (80483, 81123),\n",
+    "        (81123, 87554)\n",
+    "    ]\n",
+    "\n",
+    "    train_indices = []\n",
+    "    val_indices = []\n",
+    "\n",
+    "    for start, end in class_ranges:\n",
+    "        idx = np.arange(start, end)\n",
+    "        np.random.shuffle(idx)  # shuffle\n",
+    "        n_val = int(len(idx) * 0.2)\n",
+    "        val_indices.extend(idx[:n_val])\n",
+    "        train_indices.extend(idx[n_val:])\n",
+    "\n",
+    "    #  tensor\n",
+    "    train_dataset = TensorDataset(X_train_tensor[train_indices], y_train_tensor[train_indices])\n",
+    "    val_dataset = TensorDataset(X_train_tensor[val_indices], y_train_tensor[val_indices])\n",
+    "else:\n",
+    "    #normal split\n",
+    "    print(\"normal split\")\n",
+    "    dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
+    "    train_size = int(0.8 * len(dataset))\n",
+    "    val_size = len(dataset) - train_size\n",
+    "    train_dataset, val_dataset = random_split(dataset, [train_size, val_size])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,13 +204,13 @@
     "        self.relu = nn.ReLU()\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # --- Conv Block 1 ---\n",
+    "        # Conv Block 1\n",
     "        x = self.relu(self.bn1(self.conv1(x)))\n",
     "        x = self.relu(self.bn2(self.conv2(x)))\n",
     "        x = self.drop_c2(x)\n",
     "        x = self.pool1(x)      # [batch, 64, 93]\n",
     "        \n",
-    "        # --- Conv Block 2 ---\n",
+    "        # Conv Block 2\n",
     "        x = self.relu(self.bn3(self.conv3(x)))\n",
     "        x = self.relu(self.bn4(self.conv4(x)))\n",
     "        x = self.drop_c4(x)\n",
@@ -116,7 +219,7 @@
     "        # Flatten\n",
     "        x = x.view(x.size(0), -1)  # [batch, 5888]\n",
     "        \n",
-    "        # --- FC layers ---\n",
+    "        # FC layers\n",
     "        x = self.relu(self.bn_fc1(self.fc1(x)))\n",
     "        x = self.dropfc1(x)\n",
     "        \n",
@@ -130,73 +233,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "save_dir = os.path.join(data_dir, \"models\")\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
-    "model_path = os.path.join(save_dir, \"ECG_couple_CNN_sampler010.pt\")\n"
+    "model_path = os.path.join(save_dir, \"ECG_couple_CNN_dataAug_twoMask.pt\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100 - Train Loss: 0.3067 | Val Loss: 0.2860 | Val Acc: 0.8984\n",
+      "Epoch 1/100 - Train Loss: 0.2338 | Val Loss: 0.1342 | Val Acc: 0.9636\n",
       "Best model saved.\n",
-      "Epoch 2/100 - Train Loss: 0.1497 | Val Loss: 0.1661 | Val Acc: 0.9445\n",
+      "Epoch 2/100 - Train Loss: 0.1364 | Val Loss: 0.1052 | Val Acc: 0.9690\n",
       "Best model saved.\n",
-      "Epoch 3/100 - Train Loss: 0.1052 | Val Loss: 0.1502 | Val Acc: 0.9416\n",
+      "Epoch 3/100 - Train Loss: 0.1129 | Val Loss: 0.0929 | Val Acc: 0.9723\n",
       "Best model saved.\n",
-      "Epoch 4/100 - Train Loss: 0.0878 | Val Loss: 0.0982 | Val Acc: 0.9683\n",
+      "Epoch 4/100 - Train Loss: 0.1011 | Val Loss: 0.0842 | Val Acc: 0.9742\n",
       "Best model saved.\n",
-      "Epoch 5/100 - Train Loss: 0.0735 | Val Loss: 0.1135 | Val Acc: 0.9624\n",
-      "Epoch 6/100 - Train Loss: 0.0620 | Val Loss: 0.1169 | Val Acc: 0.9584\n",
-      "Epoch 7/100 - Train Loss: 0.0576 | Val Loss: 0.0877 | Val Acc: 0.9693\n",
+      "Epoch 5/100 - Train Loss: 0.0907 | Val Loss: 0.0933 | Val Acc: 0.9718\n",
+      "Epoch 6/100 - Train Loss: 0.0823 | Val Loss: 0.0781 | Val Acc: 0.9774\n",
       "Best model saved.\n",
-      "Epoch 8/100 - Train Loss: 0.0512 | Val Loss: 0.0801 | Val Acc: 0.9728\n",
+      "Epoch 7/100 - Train Loss: 0.0747 | Val Loss: 0.0745 | Val Acc: 0.9769\n",
       "Best model saved.\n",
-      "Epoch 9/100 - Train Loss: 0.0464 | Val Loss: 0.0712 | Val Acc: 0.9772\n",
+      "Epoch 8/100 - Train Loss: 0.0679 | Val Loss: 0.0722 | Val Acc: 0.9783\n",
       "Best model saved.\n",
-      "Epoch 10/100 - Train Loss: 0.0421 | Val Loss: 0.0806 | Val Acc: 0.9720\n",
-      "Epoch 11/100 - Train Loss: 0.0416 | Val Loss: 0.0608 | Val Acc: 0.9811\n",
+      "Epoch 9/100 - Train Loss: 0.0657 | Val Loss: 0.0726 | Val Acc: 0.9780\n",
+      "Epoch 10/100 - Train Loss: 0.0601 | Val Loss: 0.0739 | Val Acc: 0.9790\n",
+      "Epoch 11/100 - Train Loss: 0.0557 | Val Loss: 0.0727 | Val Acc: 0.9786\n",
+      "Epoch 12/100 - Train Loss: 0.0520 | Val Loss: 0.0674 | Val Acc: 0.9790\n",
       "Best model saved.\n",
-      "Epoch 12/100 - Train Loss: 0.0383 | Val Loss: 0.0735 | Val Acc: 0.9763\n",
-      "Epoch 13/100 - Train Loss: 0.0341 | Val Loss: 0.0588 | Val Acc: 0.9818\n",
+      "Epoch 13/100 - Train Loss: 0.0466 | Val Loss: 0.0675 | Val Acc: 0.9801\n",
+      "Epoch 14/100 - Train Loss: 0.0458 | Val Loss: 0.0623 | Val Acc: 0.9820\n",
       "Best model saved.\n",
-      "Epoch 14/100 - Train Loss: 0.0344 | Val Loss: 0.0751 | Val Acc: 0.9752\n",
-      "Epoch 15/100 - Train Loss: 0.0310 | Val Loss: 0.0682 | Val Acc: 0.9785\n",
-      "Epoch 16/100 - Train Loss: 0.0288 | Val Loss: 0.0660 | Val Acc: 0.9800\n",
-      "Epoch 17/100 - Train Loss: 0.0286 | Val Loss: 0.0649 | Val Acc: 0.9798\n",
-      "Epoch 18/100 - Train Loss: 0.0282 | Val Loss: 0.0557 | Val Acc: 0.9829\n",
-      "Best model saved.\n",
-      "Epoch 19/100 - Train Loss: 0.0237 | Val Loss: 0.0550 | Val Acc: 0.9842\n",
-      "Best model saved.\n",
-      "Epoch 20/100 - Train Loss: 0.0260 | Val Loss: 0.0499 | Val Acc: 0.9852\n",
-      "Best model saved.\n",
-      "Epoch 21/100 - Train Loss: 0.0221 | Val Loss: 0.0633 | Val Acc: 0.9820\n",
-      "Epoch 22/100 - Train Loss: 0.0239 | Val Loss: 0.0592 | Val Acc: 0.9834\n",
-      "Epoch 23/100 - Train Loss: 0.0208 | Val Loss: 0.0563 | Val Acc: 0.9844\n",
-      "Epoch 24/100 - Train Loss: 0.0209 | Val Loss: 0.0631 | Val Acc: 0.9827\n",
-      "Epoch 25/100 - Train Loss: 0.0203 | Val Loss: 0.0552 | Val Acc: 0.9849\n",
-      "Epoch 26/100 - Train Loss: 0.0210 | Val Loss: 0.0613 | Val Acc: 0.9825\n",
-      "Epoch 27/100 - Train Loss: 0.0189 | Val Loss: 0.0613 | Val Acc: 0.9846\n",
-      "Epoch 28/100 - Train Loss: 0.0190 | Val Loss: 0.0637 | Val Acc: 0.9809\n",
-      "Epoch 29/100 - Train Loss: 0.0170 | Val Loss: 0.0679 | Val Acc: 0.9816\n",
-      "Epoch 30/100 - Train Loss: 0.0188 | Val Loss: 0.0556 | Val Acc: 0.9857\n",
-      "Epoch 31/100 - Train Loss: 0.0163 | Val Loss: 0.0572 | Val Acc: 0.9838\n",
-      "Epoch 32/100 - Train Loss: 0.0168 | Val Loss: 0.0540 | Val Acc: 0.9869\n",
-      "Epoch 33/100 - Train Loss: 0.0164 | Val Loss: 0.0549 | Val Acc: 0.9859\n",
-      "Epoch 34/100 - Train Loss: 0.0168 | Val Loss: 0.0599 | Val Acc: 0.9822\n",
-      "Epoch 35/100 - Train Loss: 0.0161 | Val Loss: 0.0594 | Val Acc: 0.9846\n",
-      "Early stopping at epoch 35\n"
+      "Epoch 15/100 - Train Loss: 0.0419 | Val Loss: 0.0650 | Val Acc: 0.9805\n",
+      "Epoch 16/100 - Train Loss: 0.0403 | Val Loss: 0.0671 | Val Acc: 0.9809\n",
+      "Epoch 17/100 - Train Loss: 0.0397 | Val Loss: 0.0697 | Val Acc: 0.9801\n",
+      "Epoch 18/100 - Train Loss: 0.0363 | Val Loss: 0.0693 | Val Acc: 0.9809\n",
+      "Epoch 19/100 - Train Loss: 0.0334 | Val Loss: 0.0662 | Val Acc: 0.9813\n",
+      "Epoch 20/100 - Train Loss: 0.0338 | Val Loss: 0.0636 | Val Acc: 0.9821\n",
+      "Epoch 21/100 - Train Loss: 0.0319 | Val Loss: 0.0646 | Val Acc: 0.9822\n",
+      "Epoch 22/100 - Train Loss: 0.0299 | Val Loss: 0.0657 | Val Acc: 0.9832\n",
+      "Epoch 23/100 - Train Loss: 0.0289 | Val Loss: 0.0718 | Val Acc: 0.9817\n",
+      "Epoch 24/100 - Train Loss: 0.0279 | Val Loss: 0.0698 | Val Acc: 0.9820\n",
+      "Epoch 25/100 - Train Loss: 0.0278 | Val Loss: 0.0654 | Val Acc: 0.9829\n",
+      "Epoch 26/100 - Train Loss: 0.0256 | Val Loss: 0.0681 | Val Acc: 0.9822\n",
+      "Epoch 27/100 - Train Loss: 0.0240 | Val Loss: 0.0723 | Val Acc: 0.9814\n",
+      "Epoch 28/100 - Train Loss: 0.0247 | Val Loss: 0.0665 | Val Acc: 0.9821\n",
+      "Epoch 29/100 - Train Loss: 0.0247 | Val Loss: 0.0673 | Val Acc: 0.9829\n",
+      "Early stopping at epoch 29\n"
      ]
     }
    ],
@@ -204,44 +298,14 @@
     "# =========================\n",
     "# 3.Training\n",
     "# =========================\n",
-    "#normal split\n",
-    "# dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
-    "# train_size = int(0.8 * len(dataset))\n",
-    "# val_size = len(dataset) - train_size\n",
-    "# train_dataset, val_dataset = random_split(dataset, [train_size, val_size])\n",
-    "\n",
-    "#keep same seed for all model\n",
-    "np.random.seed(42)\n",
-    "\n",
-    "#Stratified split\n",
-    "class_ranges = [\n",
-    "    (0, 72471),\n",
-    "    (72471, 74694),\n",
-    "    (74694, 80483),\n",
-    "    (80483, 81123),\n",
-    "    (81123, 87554)\n",
-    "]\n",
-    "\n",
-    "train_indices = []\n",
-    "val_indices = []\n",
-    "\n",
-    "for start, end in class_ranges:\n",
-    "    idx = np.arange(start, end)\n",
-    "    np.random.shuffle(idx)  # shuffle\n",
-    "    n_val = int(len(idx) * 0.2)\n",
-    "    val_indices.extend(idx[:n_val])\n",
-    "    train_indices.extend(idx[n_val:])\n",
-    "    \n",
-    "#  tensor\n",
-    "train_dataset = TensorDataset(X_train_tensor[train_indices], y_train_tensor[train_indices])\n",
-    "val_dataset = TensorDataset(X_train_tensor[val_indices], y_train_tensor[val_indices])\n",
     "\n",
     "\n",
     "#data loader\n",
     "#sampler\n",
-    "use_sampler = True\n",
+    "use_sampler = False\n",
     "target_ratio = 0.1\n",
     "if use_sampler:\n",
+    "    print(f\"use sampler, target_ratio : {target_ratio}\")\n",
     "    y_train_split = y_train[train_indices]\n",
     "    class_sample_counts = np.bincount(y_train_split)\n",
     "\n",
@@ -265,24 +329,26 @@
     "    train_loader = DataLoader(train_dataset, batch_size=64, sampler=sampler)\n",
     "else:\n",
     "    train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
-    "\n",
-    "#train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=64, shuffle=False)\n",
     "\n",
-    "# weight loss\n",
-    "class_counts = [72471, 2223, 5789, 640, 6431]\n",
-    "total_samples = sum(class_counts)\n",
-    "num_classes = len(class_counts)\n",
-    "base_weights = [total_samples / (num_classes * n) for n in class_counts]\n",
+    "#class weight loss\n",
+    "weight_loss = False\n",
+    "#alpha = 1, fully weight according to class frequency, alpha = 0 no weighting\n",
+    "alpha = 1\n",
+    "if weight_loss:\n",
+    "    print(f\"class weight loss, alpha : {alpha}\")\n",
+    "    class_counts = [72471, 2223, 5789, 640, 6431]\n",
+    "    total_samples = sum(class_counts)\n",
+    "    num_classes = len(class_counts)\n",
+    "    base_weights = [total_samples / (num_classes * n) for n in class_counts]\n",
     "\n",
-    "# alpha = 1, fully weight according to class frequency, alpha = 0 no weighting\n",
-    "# alpha = 1\n",
-    "# adjusted_weights = [1 + alpha * (w - 1) for w in base_weights]\n",
-    "# weights_tensor = torch.tensor(adjusted_weights, dtype=torch.float32).to(device)\n",
     "\n",
+    "    adjusted_weights = [1 + alpha * (w - 1) for w in base_weights]\n",
+    "    weights_tensor = torch.tensor(adjusted_weights, dtype=torch.float32).to(device)\n",
+    "    criterion = nn.CrossEntropyLoss(weight=weights_tensor)\n",
+    "else:\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
     "model = ECG_CNN().to(device)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "# criterion = nn.CrossEntropyLoss(weight=weights_tensor)\n",
     "#optimizer = optim.Adam(model.parameters(), lr=1e-3)\n",
     "optimizer = optim.AdamW(model.parameters(), lr=1e-3,weight_decay=1e-3)\n",
     "# Scheduler: reduce LR on plateau (val loss)\n",
@@ -293,7 +359,7 @@
     "patience_es = 15\n",
     "no_improve_count = 0\n",
     "for epoch in range(num_epochs):\n",
-    "    # ---- Training ----\n",
+    "    # Training\n",
     "    model.train()\n",
     "    train_loss = 0\n",
     "    for X, y in train_loader:\n",
@@ -306,7 +372,7 @@
     "        train_loss += loss.item() * X.size(0)\n",
     "    train_loss /= len(train_loader.dataset)\n",
     "\n",
-    "    # ---- Validation ----\n",
+    "    # Validation\n",
     "    model.eval()\n",
     "    val_loss = 0\n",
     "    correct = 0\n",
@@ -326,7 +392,7 @@
     "    # scheduler step (use val loss)\n",
     "    #scheduler.step(val_loss)\n",
     "\n",
-    "    # ---- Save Best ----\n",
+    "    # Save Best \n",
     "    if val_loss < best_val_loss:\n",
     "        best_val_loss = val_loss\n",
     "        torch.save(model.state_dict(), model_path)\n",
@@ -342,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 113,
    "metadata": {
     "scrolled": true
    },
@@ -391,29 +457,29 @@
      "output_type": "stream",
      "text": [
       "===== Confusion Matrix =====\n",
-      "[[18009    60    34    12     3]\n",
-      " [   91   456     9     0     0]\n",
-      " [   23     3  1399    23     0]\n",
-      " [   11     1    10   140     0]\n",
-      " [   24     0     3     0  1581]]\n",
+      "[[18032    51    22     2    11]\n",
+      " [  100   445    10     0     1]\n",
+      " [   38     4  1394     8     4]\n",
+      " [   24     0    23   115     0]\n",
+      " [   13     0     5     0  1590]]\n",
       "\n",
       "===== Per-Class Metrics =====\n",
-      "recall: [0.994  0.8201 0.9662 0.8642 0.9832]\n",
-      "specificity: [0.9605 0.997  0.9973 0.9984 0.9999]\n",
-      "precision: [0.9918 0.8769 0.9615 0.8    0.9981]\n",
-      "f1: [0.9929 0.8476 0.9638 0.8309 0.9906]\n",
+      "recall: [0.9953 0.8004 0.9627 0.7099 0.9888]\n",
+      "specificity: [0.9536 0.9974 0.9971 0.9995 0.9992]\n",
+      "precision: [0.9904 0.89   0.9587 0.92   0.99  ]\n",
+      "f1: [0.9928 0.8428 0.9607 0.8014 0.9894]\n",
       "\n",
       "===== Macro-Average Metrics =====\n",
-      "recall: 0.9255\n",
-      "specificity: 0.9906\n",
-      "precision: 0.9257\n",
-      "f1: 0.9252\n",
+      "recall: 0.8914\n",
+      "specificity: 0.9894\n",
+      "precision: 0.9498\n",
+      "f1: 0.9174\n",
       "\n",
       "===== Weighted-Average Metrics =====\n",
-      "recall: 0.9860\n",
-      "specificity: 0.9670\n",
-      "precision: 0.9859\n",
-      "f1: 0.9859\n"
+      "recall: 0.9856\n",
+      "specificity: 0.9613\n",
+      "precision: 0.9852\n",
+      "f1: 0.9852\n"
      ]
     }
    ],
