--- a/ECG_CNN_3layers.ipynb
+++ b/ECG_CNN_3layers.ipynb
@@ -71,14 +71,13 @@
     "        self.conv2 = nn.Conv1d(32, 64, kernel_size=5, padding=2)\n",
     "        self.conv3 = nn.Conv1d(64, 128, kernel_size=5, padding=2)\n",
     "        self.relu = nn.ReLU()\n",
-    "        self.gap = nn.AdaptiveAvgPool1d(1)\n",
-    "        self.fc = nn.Linear(128, num_classes)\n",
+    "        self.fc = nn.Linear(128*187, num_classes),
     "\n",
     "    def forward(self, x):\n",
     "        x = self.relu(self.conv1(x))\n",
     "        x = self.relu(self.conv2(x))\n",
     "        x = self.relu(self.conv3(x))\n",
-    "        x = self.gap(x).squeeze(-1)\n",
+    "        x = x.reshape(x.shape[0], -1),
     "        x = self.fc(x)\n",
     "        return x\n"
    ]
