--- a/ECG_CNN_3layers.ipynb
+++ b/ECG_CNN_3layers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,23 +68,35 @@
     "    def __init__(self, num_classes=5):\n",
     "        super(ECG_CNN, self).__init__()\n",
     "        self.conv1 = nn.Conv1d(1, 32, kernel_size=5, padding=2)\n",
+    "        self.bn1 = nn.BatchNorm1d(32)\n",
+    "        self.drop_c1 = nn.Dropout(0.2)\n",
+    "        \n",
     "        self.conv2 = nn.Conv1d(32, 64, kernel_size=5, padding=2)\n",
+    "        self.bn2 = nn.BatchNorm1d(64)\n",
+    "        self.drop_c2 = nn.Dropout(0.25)\n",
+    "        \n",
     "        self.conv3 = nn.Conv1d(64, 128, kernel_size=5, padding=2)\n",
+    "        self.bn3 = nn.BatchNorm1d(128)\n",
+    "        self.drop_c3 = nn.Dropout(0.3)   # Dropout after C1\n",
+    "\n",
     "        self.relu = nn.ReLU()\n",
-    "        self.fc = nn.Linear(128*187, num_classes),
+    "        self.fc = nn.Linear(128*187, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.relu(self.conv1(x))\n",
-    "        x = self.relu(self.conv2(x))\n",
-    "        x = self.relu(self.conv3(x))\n",
-    "        x = x.reshape(x.shape[0], -1),
+    "        x = self.relu(self.bn1(self.conv1(x)))\n",
+    "        x = self.drop_c1(x)\n",
+    "        x = self.relu(self.bn2(self.conv2(x)))\n",
+    "        x = self.drop_c2(x)\n",
+    "        x = self.relu(self.bn3(self.conv3(x)))\n",
+    "        x = self.drop_c3(x)\n",
+    "        x = x.reshape(x.shape[0], -1)\n",
     "        x = self.fc(x)\n",
     "        return x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,145 +108,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100 - Train Loss: 0.4555 | Val Loss: 0.3743 | Val Acc: 0.8945\n",
+      "Epoch 1/100 - Train Loss: 0.2095 | Val Loss: 0.1167 | Val Acc: 0.9685\n",
       "Best model saved.\n",
-      "Epoch 2/100 - Train Loss: 0.2885 | Val Loss: 0.2823 | Val Acc: 0.9240\n",
+      "Epoch 2/100 - Train Loss: 0.1157 | Val Loss: 0.1011 | Val Acc: 0.9736\n",
       "Best model saved.\n",
-      "Epoch 3/100 - Train Loss: 0.2229 | Val Loss: 0.2107 | Val Acc: 0.9387\n",
+      "Epoch 3/100 - Train Loss: 0.0958 | Val Loss: 0.0966 | Val Acc: 0.9754\n",
       "Best model saved.\n",
-      "Epoch 4/100 - Train Loss: 0.1944 | Val Loss: 0.1882 | Val Acc: 0.9485\n",
+      "Epoch 4/100 - Train Loss: 0.0849 | Val Loss: 0.0802 | Val Acc: 0.9778\n",
       "Best model saved.\n",
-      "Epoch 5/100 - Train Loss: 0.1790 | Val Loss: 0.1843 | Val Acc: 0.9470\n",
+      "Epoch 5/100 - Train Loss: 0.0775 | Val Loss: 0.0745 | Val Acc: 0.9790\n",
       "Best model saved.\n",
-      "Epoch 6/100 - Train Loss: 0.1640 | Val Loss: 0.1602 | Val Acc: 0.9562\n",
+      "Epoch 6/100 - Train Loss: 0.0711 | Val Loss: 0.0761 | Val Acc: 0.9796\n",
+      "Epoch 7/100 - Train Loss: 0.0649 | Val Loss: 0.0746 | Val Acc: 0.9798\n",
+      "Epoch 8/100 - Train Loss: 0.0613 | Val Loss: 0.0732 | Val Acc: 0.9805\n",
       "Best model saved.\n",
-      "Epoch 7/100 - Train Loss: 0.1547 | Val Loss: 0.1741 | Val Acc: 0.9509\n",
-      "Epoch 8/100 - Train Loss: 0.1462 | Val Loss: 0.1508 | Val Acc: 0.9602\n",
+      "Epoch 9/100 - Train Loss: 0.0576 | Val Loss: 0.0708 | Val Acc: 0.9809\n",
       "Best model saved.\n",
-      "Epoch 9/100 - Train Loss: 0.1400 | Val Loss: 0.1490 | Val Acc: 0.9608\n",
+      "Epoch 10/100 - Train Loss: 0.0525 | Val Loss: 0.0722 | Val Acc: 0.9794\n",
+      "Epoch 11/100 - Train Loss: 0.0497 | Val Loss: 0.0743 | Val Acc: 0.9810\n",
+      "Epoch 12/100 - Train Loss: 0.0468 | Val Loss: 0.0709 | Val Acc: 0.9797\n",
+      "Epoch 13/100 - Train Loss: 0.0452 | Val Loss: 0.0726 | Val Acc: 0.9810\n",
+      "Epoch 14/100 - Train Loss: 0.0434 | Val Loss: 0.0702 | Val Acc: 0.9817\n",
       "Best model saved.\n",
-      "Epoch 10/100 - Train Loss: 0.1354 | Val Loss: 0.1412 | Val Acc: 0.9622\n",
+      "Epoch 15/100 - Train Loss: 0.0404 | Val Loss: 0.0721 | Val Acc: 0.9819\n",
+      "Epoch 16/100 - Train Loss: 0.0385 | Val Loss: 0.0699 | Val Acc: 0.9814\n",
       "Best model saved.\n",
-      "Epoch 11/100 - Train Loss: 0.1309 | Val Loss: 0.1498 | Val Acc: 0.9605\n",
-      "Epoch 12/100 - Train Loss: 0.1261 | Val Loss: 0.1323 | Val Acc: 0.9638\n",
+      "Epoch 17/100 - Train Loss: 0.0378 | Val Loss: 0.0691 | Val Acc: 0.9810\n",
       "Best model saved.\n",
-      "Epoch 13/100 - Train Loss: 0.1225 | Val Loss: 0.1432 | Val Acc: 0.9610\n",
-      "Epoch 14/100 - Train Loss: 0.1183 | Val Loss: 0.1281 | Val Acc: 0.9641\n",
+      "Epoch 18/100 - Train Loss: 0.0354 | Val Loss: 0.0704 | Val Acc: 0.9822\n",
+      "Epoch 19/100 - Train Loss: 0.0347 | Val Loss: 0.0677 | Val Acc: 0.9829\n",
       "Best model saved.\n",
-      "Epoch 15/100 - Train Loss: 0.1164 | Val Loss: 0.1368 | Val Acc: 0.9638\n",
-      "Epoch 16/100 - Train Loss: 0.1124 | Val Loss: 0.1262 | Val Acc: 0.9646\n",
-      "Best model saved.\n",
-      "Epoch 17/100 - Train Loss: 0.1093 | Val Loss: 0.1221 | Val Acc: 0.9666\n",
-      "Best model saved.\n",
-      "Epoch 18/100 - Train Loss: 0.1062 | Val Loss: 0.1225 | Val Acc: 0.9669\n",
-      "Epoch 19/100 - Train Loss: 0.1037 | Val Loss: 0.1209 | Val Acc: 0.9670\n",
-      "Best model saved.\n",
-      "Epoch 20/100 - Train Loss: 0.1006 | Val Loss: 0.1711 | Val Acc: 0.9565\n",
-      "Epoch 21/100 - Train Loss: 0.0996 | Val Loss: 0.1108 | Val Acc: 0.9692\n",
-      "Best model saved.\n",
-      "Epoch 22/100 - Train Loss: 0.0950 | Val Loss: 0.1088 | Val Acc: 0.9693\n",
-      "Best model saved.\n",
-      "Epoch 23/100 - Train Loss: 0.0943 | Val Loss: 0.1057 | Val Acc: 0.9702\n",
-      "Best model saved.\n",
-      "Epoch 24/100 - Train Loss: 0.0916 | Val Loss: 0.1082 | Val Acc: 0.9689\n",
-      "Epoch 25/100 - Train Loss: 0.0915 | Val Loss: 0.1033 | Val Acc: 0.9716\n",
-      "Best model saved.\n",
-      "Epoch 26/100 - Train Loss: 0.0880 | Val Loss: 0.1088 | Val Acc: 0.9713\n",
-      "Epoch 27/100 - Train Loss: 0.0876 | Val Loss: 0.1022 | Val Acc: 0.9724\n",
-      "Best model saved.\n",
-      "Epoch 28/100 - Train Loss: 0.0846 | Val Loss: 0.0987 | Val Acc: 0.9723\n",
-      "Best model saved.\n",
-      "Epoch 29/100 - Train Loss: 0.0842 | Val Loss: 0.1000 | Val Acc: 0.9722\n",
-      "Epoch 30/100 - Train Loss: 0.0830 | Val Loss: 0.1182 | Val Acc: 0.9664\n",
-      "Epoch 31/100 - Train Loss: 0.0823 | Val Loss: 0.0951 | Val Acc: 0.9742\n",
-      "Best model saved.\n",
-      "Epoch 32/100 - Train Loss: 0.0802 | Val Loss: 0.1043 | Val Acc: 0.9692\n",
-      "Epoch 33/100 - Train Loss: 0.0793 | Val Loss: 0.0963 | Val Acc: 0.9738\n",
-      "Epoch 34/100 - Train Loss: 0.0776 | Val Loss: 0.0960 | Val Acc: 0.9736\n",
-      "Epoch 35/100 - Train Loss: 0.0769 | Val Loss: 0.0949 | Val Acc: 0.9741\n",
-      "Best model saved.\n",
-      "Epoch 36/100 - Train Loss: 0.0751 | Val Loss: 0.0914 | Val Acc: 0.9761\n",
-      "Best model saved.\n",
-      "Epoch 37/100 - Train Loss: 0.0747 | Val Loss: 0.1033 | Val Acc: 0.9734\n",
-      "Epoch 38/100 - Train Loss: 0.0730 | Val Loss: 0.1009 | Val Acc: 0.9732\n",
-      "Epoch 39/100 - Train Loss: 0.0728 | Val Loss: 0.0973 | Val Acc: 0.9744\n",
-      "Epoch 40/100 - Train Loss: 0.0723 | Val Loss: 0.0923 | Val Acc: 0.9750\n",
-      "Epoch 41/100 - Train Loss: 0.0709 | Val Loss: 0.0872 | Val Acc: 0.9758\n",
-      "Best model saved.\n",
-      "Epoch 42/100 - Train Loss: 0.0701 | Val Loss: 0.0888 | Val Acc: 0.9760\n",
-      "Epoch 43/100 - Train Loss: 0.0690 | Val Loss: 0.0935 | Val Acc: 0.9755\n",
-      "Epoch 44/100 - Train Loss: 0.0680 | Val Loss: 0.0950 | Val Acc: 0.9757\n",
-      "Epoch 45/100 - Train Loss: 0.0669 | Val Loss: 0.0868 | Val Acc: 0.9758\n",
-      "Best model saved.\n",
-      "Epoch 46/100 - Train Loss: 0.0663 | Val Loss: 0.0974 | Val Acc: 0.9751\n",
-      "Epoch 47/100 - Train Loss: 0.0652 | Val Loss: 0.0841 | Val Acc: 0.9770\n",
-      "Best model saved.\n",
-      "Epoch 48/100 - Train Loss: 0.0645 | Val Loss: 0.0868 | Val Acc: 0.9766\n",
-      "Epoch 49/100 - Train Loss: 0.0644 | Val Loss: 0.1009 | Val Acc: 0.9733\n",
-      "Epoch 50/100 - Train Loss: 0.0630 | Val Loss: 0.0907 | Val Acc: 0.9773\n",
-      "Epoch 51/100 - Train Loss: 0.0632 | Val Loss: 0.0886 | Val Acc: 0.9763\n",
-      "Epoch 52/100 - Train Loss: 0.0620 | Val Loss: 0.0872 | Val Acc: 0.9771\n",
-      "Epoch 53/100 - Train Loss: 0.0614 | Val Loss: 0.0865 | Val Acc: 0.9774\n",
-      "Epoch 54/100 - Train Loss: 0.0602 | Val Loss: 0.0885 | Val Acc: 0.9758\n",
-      "Epoch 55/100 - Train Loss: 0.0606 | Val Loss: 0.0869 | Val Acc: 0.9770\n",
-      "Epoch 56/100 - Train Loss: 0.0592 | Val Loss: 0.0818 | Val Acc: 0.9790\n",
-      "Best model saved.\n",
-      "Epoch 57/100 - Train Loss: 0.0588 | Val Loss: 0.0779 | Val Acc: 0.9800\n",
-      "Best model saved.\n",
-      "Epoch 58/100 - Train Loss: 0.0579 | Val Loss: 0.0843 | Val Acc: 0.9782\n",
-      "Epoch 59/100 - Train Loss: 0.0586 | Val Loss: 0.0826 | Val Acc: 0.9785\n",
-      "Epoch 60/100 - Train Loss: 0.0570 | Val Loss: 0.0897 | Val Acc: 0.9768\n",
-      "Epoch 61/100 - Train Loss: 0.0566 | Val Loss: 0.0841 | Val Acc: 0.9766\n",
-      "Epoch 62/100 - Train Loss: 0.0553 | Val Loss: 0.0832 | Val Acc: 0.9786\n",
-      "Epoch 63/100 - Train Loss: 0.0547 | Val Loss: 0.0871 | Val Acc: 0.9772\n",
-      "Epoch 64/100 - Train Loss: 0.0548 | Val Loss: 0.0778 | Val Acc: 0.9788\n",
-      "Best model saved.\n",
-      "Epoch 65/100 - Train Loss: 0.0538 | Val Loss: 0.0880 | Val Acc: 0.9782\n",
-      "Epoch 66/100 - Train Loss: 0.0542 | Val Loss: 0.0789 | Val Acc: 0.9790\n",
-      "Epoch 67/100 - Train Loss: 0.0525 | Val Loss: 0.0887 | Val Acc: 0.9743\n",
-      "Epoch 68/100 - Train Loss: 0.0516 | Val Loss: 0.0866 | Val Acc: 0.9772\n",
-      "Epoch 69/100 - Train Loss: 0.0520 | Val Loss: 0.0842 | Val Acc: 0.9767\n",
-      "Epoch 70/100 - Train Loss: 0.0513 | Val Loss: 0.0760 | Val Acc: 0.9792\n",
-      "Best model saved.\n",
-      "Epoch 71/100 - Train Loss: 0.0507 | Val Loss: 0.0780 | Val Acc: 0.9796\n",
-      "Epoch 72/100 - Train Loss: 0.0497 | Val Loss: 0.0844 | Val Acc: 0.9774\n",
-      "Epoch 73/100 - Train Loss: 0.0493 | Val Loss: 0.0787 | Val Acc: 0.9788\n",
-      "Epoch 74/100 - Train Loss: 0.0498 | Val Loss: 0.0781 | Val Acc: 0.9792\n",
-      "Epoch 75/100 - Train Loss: 0.0500 | Val Loss: 0.0784 | Val Acc: 0.9797\n",
-      "Epoch 76/100 - Train Loss: 0.0483 | Val Loss: 0.0873 | Val Acc: 0.9794\n",
-      "Epoch 77/100 - Train Loss: 0.0475 | Val Loss: 0.0825 | Val Acc: 0.9788\n",
-      "Epoch 78/100 - Train Loss: 0.0468 | Val Loss: 0.0752 | Val Acc: 0.9805\n",
-      "Best model saved.\n",
-      "Epoch 79/100 - Train Loss: 0.0456 | Val Loss: 0.0818 | Val Acc: 0.9802\n",
-      "Epoch 80/100 - Train Loss: 0.0468 | Val Loss: 0.0753 | Val Acc: 0.9803\n",
-      "Epoch 81/100 - Train Loss: 0.0464 | Val Loss: 0.0813 | Val Acc: 0.9780\n",
-      "Epoch 82/100 - Train Loss: 0.0458 | Val Loss: 0.0822 | Val Acc: 0.9772\n",
-      "Epoch 83/100 - Train Loss: 0.0445 | Val Loss: 0.0866 | Val Acc: 0.9772\n",
-      "Epoch 84/100 - Train Loss: 0.0439 | Val Loss: 0.0768 | Val Acc: 0.9804\n",
-      "Epoch 85/100 - Train Loss: 0.0440 | Val Loss: 0.0761 | Val Acc: 0.9803\n",
-      "Epoch 86/100 - Train Loss: 0.0430 | Val Loss: 0.0878 | Val Acc: 0.9789\n",
-      "Epoch 87/100 - Train Loss: 0.0439 | Val Loss: 0.0770 | Val Acc: 0.9787\n",
-      "Epoch 88/100 - Train Loss: 0.0424 | Val Loss: 0.0811 | Val Acc: 0.9796\n",
-      "Epoch 89/100 - Train Loss: 0.0426 | Val Loss: 0.0823 | Val Acc: 0.9793\n",
-      "Epoch 90/100 - Train Loss: 0.0415 | Val Loss: 0.0837 | Val Acc: 0.9770\n",
-      "Epoch 91/100 - Train Loss: 0.0412 | Val Loss: 0.0818 | Val Acc: 0.9800\n",
-      "Epoch 92/100 - Train Loss: 0.0409 | Val Loss: 0.0859 | Val Acc: 0.9782\n",
-      "Epoch 93/100 - Train Loss: 0.0408 | Val Loss: 0.0743 | Val Acc: 0.9806\n",
-      "Best model saved.\n",
-      "Epoch 94/100 - Train Loss: 0.0407 | Val Loss: 0.0764 | Val Acc: 0.9808\n",
-      "Epoch 95/100 - Train Loss: 0.0401 | Val Loss: 0.0757 | Val Acc: 0.9808\n",
-      "Epoch 96/100 - Train Loss: 0.0394 | Val Loss: 0.0773 | Val Acc: 0.9810\n",
-      "Epoch 97/100 - Train Loss: 0.0393 | Val Loss: 0.0882 | Val Acc: 0.9794\n",
-      "Epoch 98/100 - Train Loss: 0.0388 | Val Loss: 0.0781 | Val Acc: 0.9808\n",
-      "Epoch 99/100 - Train Loss: 0.0391 | Val Loss: 0.0830 | Val Acc: 0.9802\n",
-      "Epoch 100/100 - Train Loss: 0.0375 | Val Loss: 0.0797 | Val Acc: 0.9821\n"
+      "Epoch 20/100 - Train Loss: 0.0338 | Val Loss: 0.0713 | Val Acc: 0.9817\n",
+      "Epoch 21/100 - Train Loss: 0.0324 | Val Loss: 0.0750 | Val Acc: 0.9818\n",
+      "Epoch 22/100 - Train Loss: 0.0307 | Val Loss: 0.0692 | Val Acc: 0.9823\n",
+      "Epoch 23/100 - Train Loss: 0.0302 | Val Loss: 0.0744 | Val Acc: 0.9830\n",
+      "Epoch 24/100 - Train Loss: 0.0298 | Val Loss: 0.0745 | Val Acc: 0.9817\n",
+      "Epoch 25/100 - Train Loss: 0.0285 | Val Loss: 0.0731 | Val Acc: 0.9825\n",
+      "Epoch 26/100 - Train Loss: 0.0277 | Val Loss: 0.0733 | Val Acc: 0.9826\n",
+      "Epoch 27/100 - Train Loss: 0.0267 | Val Loss: 0.0768 | Val Acc: 0.9829\n",
+      "Epoch 28/100 - Train Loss: 0.0263 | Val Loss: 0.0741 | Val Acc: 0.9827\n",
+      "Epoch 29/100 - Train Loss: 0.0253 | Val Loss: 0.0762 | Val Acc: 0.9816\n",
+      "Epoch 30/100 - Train Loss: 0.0241 | Val Loss: 0.0741 | Val Acc: 0.9825\n",
+      "Epoch 31/100 - Train Loss: 0.0238 | Val Loss: 0.0773 | Val Acc: 0.9828\n",
+      "Epoch 32/100 - Train Loss: 0.0236 | Val Loss: 0.0827 | Val Acc: 0.9825\n",
+      "Epoch 33/100 - Train Loss: 0.0233 | Val Loss: 0.0796 | Val Acc: 0.9822\n",
+      "Epoch 34/100 - Train Loss: 0.0225 | Val Loss: 0.0826 | Val Acc: 0.9824\n",
+      "Early stopping at epoch 34\n"
      ]
     }
    ],
@@ -333,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -380,29 +306,29 @@
      "output_type": "stream",
      "text": [
       "===== Confusion Matrix =====\n",
-      "[[17991    81    35     7     4]\n",
-      " [  147   400     4     5     0]\n",
-      " [   49     6  1377    14     2]\n",
-      " [   13     0    22   127     0]\n",
-      " [   20     1     4     0  1583]]\n",
+      "[[18018    44    46     7     3]\n",
+      " [  146   398    11     0     1]\n",
+      " [   48     5  1379    13     3]\n",
+      " [   25     0    20   117     0]\n",
+      " [   24     1     4     0  1579]]\n",
       "\n",
       "===== Per-Class Metrics =====\n",
-      "recall: [0.993  0.7194 0.951  0.784  0.9845]\n",
-      "specificity: [0.9393 0.9959 0.9968 0.9988 0.9997]\n",
-      "precision: [0.9874 0.8197 0.9549 0.8301 0.9962]\n",
-      "f1: [0.9902 0.7663 0.9529 0.8063 0.9903]\n",
+      "recall: [0.9945 0.7158 0.9523 0.7222 0.982 ]\n",
+      "specificity: [0.9356 0.9977 0.996  0.9991 0.9997]\n",
+      "precision: [0.9867 0.8884 0.9445 0.854  0.9956]\n",
+      "f1: [0.9906 0.7928 0.9484 0.7826 0.9887]\n",
       "\n",
       "===== Macro-Average Metrics =====\n",
-      "recall: 0.8864\n",
-      "specificity: 0.9861\n",
-      "precision: 0.9177\n",
-      "f1: 0.9012\n",
+      "recall: 0.8734\n",
+      "specificity: 0.9856\n",
+      "precision: 0.9338\n",
+      "f1: 0.9006\n",
       "\n",
       "===== Weighted-Average Metrics =====\n",
-      "recall: 0.9811\n",
-      "specificity: 0.9494\n",
-      "precision: 0.9805\n",
-      "f1: 0.9807\n"
+      "recall: 0.9817\n",
+      "specificity: 0.9464\n",
+      "precision: 0.9811\n",
+      "f1: 0.9811\n"
      ]
     }
    ],
